# pylibtooling

./: .gitignore  CMakeLists.txt  README.md  _build_wheels.sh  pyproject.toml  setup.py  update_libclang_version.sh
c_src/: CMakeLists.txt  _binding.cc.inc  binding.cc  cfg.yaml  dummy.cc
pylibtooling/: __init__.py
stubs/: build.sh  pyproject.toml
