[build-system]
requires = [
    "setuptools>=42",
    "pybind11>=2.10.0",
    "cmake>=3.24",
    "ninja",
]
build-backend = "setuptools.build_meta"

[project]
name = "pylibtooling"
description = "A fully featured & always updated python binding for Clang's libtooling."
readme = "README.md"
keywords = ["pybind11", "libtooling", "python", "clang", "binding"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Compilers"
]

dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/edimetia3d/pylibtooling"
Documentation = "https://github.com/edimetia3d/pylibtooling"
Repository = "https://github.com/edimetia3d/pylibtooling"
Changelog = "https://github.com/edimetia3d/pylibtooling/releases"

[tool.setuptools.dynamic]
version = { attr = "pylibtooling.__VERSION__" }

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["pylibtooling*"]