[build-system]
requires = [
    "setuptools>=68.2.2",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "pylibtooling-stubs"
description = "Python stubs for pylibtooling"
keywords = ["pybind11", "libtooling", "python", "stubs"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Compilers"
]

dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/edimetia3d/pylibtooling"
Documentation = "https://github.com/edimetia3d/pylibtooling"
Repository = "https://github.com/edimetia3d/pylibtooling"
Changelog = "https://github.com/edimetia3d/pylibtooling/releases"

[tool.setuptools.dynamic]
version = { attr = "pylibtooling.__CLANG_VERSION__" }

[tool.setuptools]
zip-safe = false
include-package-data = true
packages = ["pylibtooling-stubs"]

[tool.setuptools.package-data]
"*" = ["*.pyi"]
